[metadata]
name = g2tools
version = 1.4.2
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/g2tools
description = Utilities for muon g-2 analyses in lattice QCD.
long_description = file: README.rst

[options]
zip_safe = False
packages =
    g2tools
package_dir = 
    = src
python_requires = >=2.7
install_requires = 
    numpy>=1.7
    gvar>=7.3
    scipy
    lsqfit
    importlib-metadata; python_version<'3.8'
include_package_data = False
